# mobile-manipulator

./: .gitignore  README.md
turtlebot_widowx/: package.xml  setup.cfg  setup.py
turtlebot_widowx/config/: localization_params.yaml  nav2_params.yaml  slam_params.yaml
turtlebot_widowx/launch/: localization.launch.py  nav2.launch.py  navigation_full.launch.py  slam.launch.py  slam_nav2.launch.py  slam_teleop.launch.py  spawn_robot.launch.py  teleop_move.launch.py
turtlebot_widowx/maps/: test4_map.pgm  test4_map.yaml
turtlebot_widowx/rviz/: nav.rviz
turtlebot_widowx/worlds/: test.sdf  test2.sdf  test3.sdf  test4.sdf
